Change visibility of classes