@@ -12,10 +12,39 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
+<!--                    <source>14</source>-->
+<!--                    <target>14</target>-->
+                    <release>14</release>
                     <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <!-- Build an executable JAR -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifestFile>${project.url}/META-INF/MANIFEST.MF</manifestFile>
+<!--                        <manifest>-->
+<!--                            <addClasspath>true</addClasspath>-->
+<!--&lt;!&ndash;                            <classpathPrefix>lib/</classpathPrefix>&ndash;&gt;-->
+<!--                            <mainClass>student.Main</mainClass>-->
+<!--                        </manifest>-->
+                    </archive>
+
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <release>14</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <mainClass>student.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
